[tool.poetry]
name = "Celery Insights"
version = "0.2.0"
description = "Modern Real-Time Monitor for Celery"
authors = ["Dan Yishai <danyi1212@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112"
python-dotenv = "^1"
uvicorn = "^0.30"
pendulum = "*"
time-machine = "*"
celery = "~5.4"
websockets = "*"
fastapi-cache2 = "*"
user-agents = "*"
aiopath = "^0"
pydantic = "^2"
pydantic-settings = "^2"
colorlog = "*"
redis = "^5.0.8"

[tool.poetry.group.all]
optional = true

[tool.poetry.group.all.dependencies]
cryptography = "*"
celery = { version = "*", extras = [
    "arangodb",
    "couchdb",
    "consul",
    "dynamodb",
    "elasticsearch",
    "eventlet",
    "gevent",
    "msgpack",
    "pymemcache",
    "pyro",
    "redis",
    "riak",
    "s3",
    "slmq",
    "sqlalchemy",
    "tblib",
    "zookeeper",
] }

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-xdist = "*"
pytest-mock = "*"
pytest-asyncio = "*"
pytest-env = "*"
pytest-cov = "*"
polyfactory = "*"
ruff = "*"
ipython = "*"
pre-commit = "*"
poetry-plugin-bundle = "*"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "server"
log_cli_level = "INFO"

[tool.ruff]
line-length = 120
src = ["server"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # pyflakes
    "N", # pep8
    "BLE", # flake8 blind except
    "FBT", # flake8 boolean trap
    "B", # flake8 bug bear
    "C4", # flake8 comprehensions
    "PIE", # flake8 pie
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "PTH", # flake8 pathlib
    "UP", # pyupgrade
    "ERA", # comment out code
    "PD", # pandas
    "RUF", # ruff rules
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
