[project]
name = "celery-insights"
version = "0.2.0"
description = "Modern Real-Time Monitor for Celery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112",
    "python-dotenv>=1",
    "uvicorn>=0.30",
    "celery~=5.4",
    "fastapi-cache2",
    "aiopath",
    "pydantic>=2",
    "pydantic-settings>=2",
    "dans-log-formatter",
    "redis>=5.0.8",
    "surrealdb>=1.0.8",
    "python-multipart>=0.0.22",
    "prometheus-client>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-xdist",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-env",
    "pytest-cov",
    "polyfactory",
    "ruff",
    "ty",
    "ipython",
    "pre-commit",
    "httpx>=0.28.1",
]
all = [
    "cryptography",
    "celery[arangodb,couchdb,consul,dynamodb,elasticsearch,eventlet,gevent,msgpack,pymemcache,pyro,redis,riak,s3,slmq,sqlalchemy,tblib,zookeeper]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
pythonpath = "server"
log_cli_level = "INFO"

[tool.ruff]
line-length = 120
src = ["server"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # pyflakes
    "N", # pep8
    "BLE", # flake8 blind except
    "FBT", # flake8 boolean trap
    "B", # flake8 bug bear
    "C4", # flake8 comprehensions
    "PIE", # flake8 pie
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "PTH", # flake8 pathlib
    "UP", # pyupgrade
    "ERA", # comment out code
    "PD", # pandas
    "RUF", # ruff rules
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["server"]

[tool.ty.terminal]
output-format = "concise"
